--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Bowlby+One+SC&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/src/style/style.css">
+<link rel="stylesheet" href="src/style/style.css">
 </head>
 <body>
     <div class="texto">
@@ -21,7 +21,7 @@
    
 
     <div class="conteiner">
-        <img src="/src/img/tumblr_n833x3DPcC1saa3oao3_500.gif" tab="engeneer">
+        <img src="src/img/tumblr_n833x3DPcC1saa3oao3_500.gif" tab="engeneer">
     </div>
 
 </body>
